--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
+                                    <mainClass>com.cocoverco.qbcustomer.QBCustomerApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
