--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
             <version>${dropwizard.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.5.4</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
@@ -32,6 +32,11 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb</artifactId>
             <version>2.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>dumbster</groupId>
+            <artifactId>dumbster</artifactId>
+            <version>1.6</version>
         </dependency>
     </dependencies>
 
