-Add email properties to YML file - Application compiles and runs - Check delivery of email with attachment

--- a/cocoverco-service.yml
+++ b/cocoverco-service.yml
@@ -1,2 +1,6 @@
 template: Hello, %s %s of %s %s %s, %s %s with %s and %s!
 defaultName: Stranger
+emailRecipient: rnoftz@northwestern.edu
+emailHost: smtp.comcast.net
+emailPassword: c0oldeck
+emailSender: rnoftz@comcast.net
